Fixed #4: Link in <legend> overflows content of fieldset

--- a/src/inc/forms.less
+++ b/src/inc/forms.less
@@ -133,8 +133,9 @@ fieldset legend a {
 }
 
 // Makes content of fieldset clickable. This is necessary because of big <a> in fieldset's legend.
-fieldset > div > div, fieldset > div > p, fieldset > div > a, fieldset > div > code {
-	position: relative;
+fieldset > div > div, fieldset > div > p, fieldset > div > a, fieldset > div > code,
+fieldset > div > input, fieldset > div > select {
+    position: relative;
 }
 
 legend {
